--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
                       <div class="info justify-content-start">
                           <div class="content align-self-center">
                               <h3 class="title">
-                                  New Office Chair <br /> Collection
+                                  New Office Chair <br /> Collections
                               </h3>
                               <a href="shop-left-sidebar.html" class="shop-link">Shop Now</a>
                           </div>
